service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-demo-service
spec:
  selector:
    app: tomcat-demo
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
